[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://drive.google.com/open?id=1LQCEJJMPzIYMdglTUgk5df4SWFoV6Nif" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
