--- a/ui/account-one.html
+++ b/ui/account-one.html
@@ -1,2 +1,17 @@
 <html>
+    <head>
+        <title>
+            NoOne
+        </title>
+    </head>
+    <h1>
+        This is article!!!!
+    </h1>
+    <p>
+        <pre>
+            This is article one....
+            This is article one....
+            This is article one.....
+        </pre>
+    </p>
 </html>
