[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,25 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium">
+            <img src="https://pbs.twimg.com/profile_images/859621052846133248/itxX3Tag_400x400.jpg">
         </div>
         <br>
         <div class="center text-big bold">
-            !!!SURPRISE MOTHERFUCKER AKASH!!!
+            <hr>
+            <h1>
+               Personal data 
+            </h1>
+            <p>
+                My name is gustavo
+            </p>
+            <hr>
+            <h1>
+                Professional
+            </h1>
+            <p>
+                I work at drama alert
+            </p>
+            <hr>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
