[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,9 @@
                 I work at drama alert
             </p>
             <hr>
+            <div id="footer">
+                This button<button id="counter">click me!</button> has been click<span id="count">0</span>times.
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
