[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <link href="/ui/style.css" rel="stylesheet" >
-        <link href="/ui/main.js" >
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="center">
