--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
                 I work at drama alert
             </p>
             <hr>
-            <div id="footer">
+            <div>
                 This  button  <button id="counter">click me!</button>  has  been  click <span id="count">0</span>  times.
             </div>
         </div>
