--- a/ui/index.html
+++ b/ui/index.html
@@ -5,28 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/859621052846133248/itxX3Tag_400x400.jpg">
+            <img src="/ui/madi.png" class="img-medium">
         </div>
         <br>
         <div class="center text-big bold">
-            <hr>
-            <h1>
-               Personal data 
-            </h1>
-            <p>
-                My name is gustavo
-            </p>
-            <hr>
-            <h1>
-                Professional
-            </h1>
-            <p>
-                I work at drama alert
-            </p>
-            <hr>
-            <div>
-                This  button  <button id="counter">click me!</button>  has  been  click <span id="count">0</span>  times.
-            </div>
+            Hi! I am your Webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
