Made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,10 @@
         <div class="center text-big bold">
             <h1>
             Hi! I am your Webapp.
-            </h1>
+           </h1>
+	   <h4>
+		   this is new heading!
+	   </h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
