[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,24 @@
-html
+<html>
+    <head>
+        <title>
+            article one
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">HOME</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            sep 5,2018
+        </div>
+        <div>
+            <p>
+                this is my first web page. i hope you like it.
+            </p>
+        </div>
+    </body>
 </html>
