--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            article one
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+    <body>
+        <div>
+            <a href="/">HOME</a>
+        </div>
+        <hr/>
+        <h3>
+            Article two
+        </h3>
+        <div>
+            sep 5,2018
+        </div>
+        <div>
+            <p>
+                this is my second web page. i hope you like it. this is my second  web page. i hope you like it. this is my second  web page. i hope you like it. this is my first web page. i hope you like it. this is my first web page. i hope you like it.
+            </p>
+            <p>
+                this is my second web page. i hope you like it. this is my second web page. i hope you like it. this is my second web page. i hope you like it. this is my first web page. i hope you like it. this is my first web page. i hope you like it.
+            </p>
+            <p>
+                this is my second  web page. i hope you like it. this is my second web page. i hope you like it. this is my second web page. i hope you like it. this is my first web page. i hope you like it. this is my first web page. i hope you like it.
+            </p>
+        </div>
+    </body>
+</html>
