--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,8 +5,18 @@
             article one
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+                padding-top: 60px;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">HOME</a>
         </div>
@@ -27,6 +37,7 @@
             <p>
                 this is my second  web page. i hope you like it. this is my second web page. i hope you like it. this is my second web page. i hope you like it. this is my first web page. i hope you like it. this is my first web page. i hope you like it.
             </p>
+        </div>
         </div>
     </body>
 </html>
