[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,9 @@
 	   <h4>
 		   this is new heading!
 	   </h4>
+	   <script>
+	       alert("hi all");
+	   </script>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
