--- a/ui/index.html
+++ b/ui/index.html
@@ -8,16 +8,13 @@
             <img src="/ui/madi.png" class="img-medium">
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="main-text" class="center text-big bold">
             <h1>
             Hi! I am your Webapp.
            </h1>
 	   <h4>
 		   this is new heading!
 	   </h4>
-	   <script>
-	       alert("hi all");
-	   </script>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
