--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,8 @@
         </div>
         <hr>
         </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        <div id="counter">
+            This button <button>click me!</button> has been clicked <span id="count">0</span> times.
+        </div>
     </body>
 </html>
