[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
         </div>
         <hr>
         </div>
-        <div id="counter">
+        <div id="counter" class="container">
             This button <button>click me!</button> has been clicked <span id="count">0</span> times.
         </div>
     </body>
