--- a/ui/index.html
+++ b/ui/index.html
@@ -23,5 +23,7 @@
         <div id="counter" class="container">
             This button <button id="button">click me!</button> has been clicked <span id="count">0</span> times.
         </div>
+        <script type="text/javascript" src="/ui/main.js">
+        </script>
     </body>
 </html>
