--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,9 @@
         </div>
         <div id="counter" class="container">
             This button <button id="button">click me!</button> has been clicked <span id="count">0</span> times.
+            <br />
+            <input type="text" id="name" placeholder="name">
+            <input type="submit" value="submit">
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
