--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             I work at wwe. you cant see me.
         </div>
         </div>
-        <div id="counter" class="container">
+        <div id="counter" class="footer">
             This button <button id="button">click me!</button> has been clicked <span id="count">0</span> times.
             <br />
             <input type="text" id="name" placeholder="name">
