--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,17 @@
             I work at wwe. you cant see me.
         </div>
         </div>
-        <div id="counter" class="footer">
+        <div id="counter" class="container">
             This button <button id="button">click me!</button> has been clicked <span id="count">0</span> times.
             <br />
+            <hr>
             <input type="text" id="name" placeholder="name">
             <input type="submit" value="submit">
+            <ul>
+                <li>name1</li>
+                <li>name2</li>
+                <li>name3</li>
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
