--- a/ui/index.html
+++ b/ui/index.html
@@ -25,8 +25,8 @@
             <br />
             <hr>
             <input type="text" id="name" placeholder="name">
-            <input type="submit" value="submit">
-            <ul>
+            <input type="submit" value="submit" id="submit_btn">
+            <ul id="order">
                 <li>name1</li>
                 <li>name2</li>
                 <li>name3</li>
