--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,8 @@
             This button <button id="button">click me!</button> has been clicked <span id="count">0</span> times.
             <br />
             <hr>
-            <input type="text" id="name" placeholder="name">
-            <input type="submit" value="submit" id="submit_btn">
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="submit" id="submit_btn"></input>
             <ul id="order">
                 <li>name1</li>
                 <li>name2</li>
