--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
             <hr>
             <input type="text" id="name" placeholder="name">
             <input type="submit" value="submit" id="submit_btn">
-            <ul id="order">
+            <ul id="namelist">
             </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
