--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
             <br />
             <hr>
             <input type="text" id="name" placeholder="name">
-            <input type="submit" value="submit" id="submit_btn">
+            <input id='submit_btn' type="submit" value="submit">
             <ul id="namelist">
             </ul>
         </div>
